Bug 456214 - Polish toolbar buttons in the Add-ons Manager, Page Info dialog and Error Console, r=dao
UltraBlame original commit: 5090a2e23f6b57c93e71a5654375f29ae5beb782

--- a/toolkit/themes/pinstripe/global/console/console.css
+++ b/toolkit/themes/pinstripe/global/console/console.css
@@ -536,6 +536,27 @@ window
 =
 *
 /
+/
+*
+View
+buttons
+*
+/
+import
+"
+chrome
+:
+/
+/
+global
+/
+skin
+/
+viewbuttons
+.
+css
+"
+;
 namespace
 url
 (
@@ -564,37 +585,6 @@ xul
 "
 )
 ;
-#
-JSConsoleWindow
-:
-not
-(
-[
-active
-=
-"
-true
-"
-]
-)
->
-#
-console
--
-toolbox
->
-#
-ToolbarMode
->
-toolbarbutton
-{
-opacity
-:
-0
-.
-7
-;
-}
 .
 console
 -
@@ -1411,62 +1401,6 @@ icons
 #
 ToolbarMode
 {
-background
--
-color
-:
-#
-999
-;
-border
--
-bottom
-:
-1px
-solid
-#
-404040
-;
-background
--
-image
-:
-url
-(
-"
-chrome
-:
-/
-/
-global
-/
-skin
-/
-toolbar
-/
-toolbar
--
-background
-.
-gif
-"
-)
-;
-background
--
-repeat
-:
-repeat
--
-x
-;
-background
--
-position
-:
-top
-right
-;
 padding
 :
 4px
@@ -1486,48 +1420,106 @@ center
 #
 ToolbarMode
 toolbarbutton
+>
+.
+toolbarbutton
+-
+icon
 {
-border
+display
 :
+none
+;
+}
+#
+viewGroup
+{
+-
+moz
+-
+appearance
+:
+none
+;
+padding
+:
+0
+;
+}
+#
+Console
+\
+:
+clear
+{
+-
+moz
+-
+box
+-
+orient
+:
+vertical
+;
+-
+moz
+-
+box
+-
+align
+:
+center
+;
+font
+:
+menu
+;
+text
+-
+shadow
+:
+rgba
+(
+255
+255
+255
+0
+.
+4
+)
+0
 1px
+;
+margin
+:
+0
+;
+padding
+:
+3px
+0
+0
+;
+height
+:
+24px
+;
+border
+:
 solid
-#
-404040
+transparent
 ;
 border
 -
-bottom
--
 width
 :
-2px
+0
+6px
 ;
 -
 moz
 -
 border
--
-start
--
-width
-:
-0px
-;
--
-moz
--
-border
--
-bottom
--
-colors
-:
-#
-C2C2C2
-#
-404040
-;
-background
 -
 image
 :
@@ -1542,270 +1534,18 @@ global
 /
 skin
 /
-icons
+toolbar
 /
-white
--
-gray
--
-gradient
+roundrectbutton
 .
-gif
+png
 "
 )
-;
-background
--
-repeat
-:
-repeat
--
-x
-;
-font
-:
-menu
-;
-margin
-:
 0
-;
-padding
-:
-0
-4px
-;
-}
-toolbar
-#
-ToolbarMode
-toolbarbutton
-[
-checked
-]
-{
-background
--
-image
-:
-none
-;
-background
--
-color
-:
-#
-5E5E5E
-;
-color
-:
-#
-ffffff
+6
+repeat
 !
 important
-;
-}
-#
-Console
-\
-:
-modeAll
-{
--
-moz
--
-border
--
-start
--
-width
-:
-1px
-!
-important
-;
--
-moz
--
-border
--
-radius
--
-bottomleft
-:
-5px
-;
--
-moz
--
-border
--
-radius
--
-topleft
-:
-4px
-;
-}
-#
-console
--
-toolbox
-[
-chromedir
-=
-"
-rtl
-"
-]
->
-#
-ToolbarMode
->
-#
-Console
-\
-:
-modeAll
-{
--
-moz
--
-border
--
-radius
--
-bottomleft
-:
-0
-;
--
-moz
--
-border
--
-radius
--
-topleft
-:
-0
-;
--
-moz
--
-border
--
-radius
--
-bottomright
-:
-5px
-;
--
-moz
--
-border
--
-radius
--
-topright
-:
-4px
-;
-}
-#
-Console
-\
-:
-modeMessages
-{
--
-moz
--
-border
--
-radius
--
-bottomright
-:
-5px
-;
--
-moz
--
-border
--
-radius
--
-topright
-:
-4px
-;
-}
-#
-console
--
-toolbox
-[
-chromedir
-=
-"
-rtl
-"
-]
->
-#
-ToolbarMode
->
-#
-Console
-\
-:
-modeMessages
-{
--
-moz
--
-border
--
-radius
--
-bottomright
-:
-0
-;
--
-moz
--
-border
--
-radius
--
-topright
-:
-0
-;
--
-moz
--
-border
--
-radius
--
-bottomleft
-:
-5px
-;
--
-moz
--
-border
--
-radius
--
-topleft
-:
-4px
 ;
 }
 #
@@ -1813,112 +1553,110 @@ Console
 \
 :
 clear
-{
--
-moz
--
-border
--
-start
--
-width
-:
-1px
-!
-important
-;
--
-moz
--
-border
--
-radius
--
-topright
-:
-4px
-;
--
-moz
--
-border
--
-radius
--
-topleft
-:
-4px
-;
--
-moz
--
-border
--
-radius
--
-bottomright
-:
-5px
-;
--
-moz
--
-border
--
-radius
--
-bottomleft
-:
-5px
-;
-}
-#
-Console
-\
-:
-clear
-:
-hover
 :
 active
+:
+hover
 {
-background
+-
+moz
+-
+border
 -
 image
 :
-none
-;
-background
+url
+(
+"
+chrome
+:
+/
+/
+global
+/
+skin
+/
+toolbar
+/
+roundrectbutton
 -
-color
-:
-#
-5E5E5E
-;
-color
-:
-#
-ffffff
+down
+.
+png
+"
+)
+0
+6
+repeat
 !
 important
 ;
 }
-#
-ConsoleBox
-{
-margin
--
-bottom
 :
-14px
+root
+:
+not
+(
+[
+active
+]
+)
+#
+Console
+\
+:
+clear
+{
+color
+:
+#
+7C7C7C
+!
+important
 ;
+/
+*
+remove
+this
+when
+we
+support
+click
+-
+through
+*
+/
+-
+moz
+-
 border
 -
-bottom
+image
 :
-1px
-solid
-#
-bebebe
+url
+(
+"
+chrome
+:
+/
+/
+global
+/
+skin
+/
+toolbar
+/
+roundrectbutton
+-
+inactive
+.
+png
+"
+)
+0
+6
+repeat
+!
+important
 ;
 }
