--- a/toolkit/themes/pinstripe/mozapps/extensions/extensions.css
+++ b/toolkit/themes/pinstripe/mozapps/extensions/extensions.css
@@ -1,33 +1,24 @@
-#
-extensionsManager
-:
-not
-(
-[
-active
-=
+/
+*
+View
+buttons
+*
+/
+import
 "
-true
-"
-]
-)
->
-#
-topStackBar
->
-#
-viewGroup
->
-.
-radiogroupWrapper
-{
-opacity
+chrome
 :
-0
+/
+/
+global
+/
+skin
+/
+viewbuttons
 .
-7
+css
+"
 ;
-}
 #
 extensionsBox
 {
@@ -1902,31 +1893,6 @@ padding
 5px
 5px
 ;
-}
-#
-progressBox
->
-hbox
-{
--
-moz
--
-box
--
-align
-:
-center
-;
-}
-/
-*
-View
-buttons
-*
-/
-.
-viewSelector
-{
 -
 moz
 -
@@ -1941,236 +1907,20 @@ unified
 -
 toolbar
 ;
-padding
-:
-4px
-0
-8px
-;
-margin
-:
-0
-;
+}
+#
+progressBox
+>
+hbox
+{
 -
 moz
 -
 box
 -
-pack
+align
 :
 center
-;
-}
-#
-viewGroup
-{
--
-moz
--
-binding
-:
-url
-(
-"
-chrome
-:
-/
-/
-mozapps
-/
-skin
-/
-extensions
-/
-extensions
-.
-xml
-#
-radiogroupWrapper
-"
-)
-;
-}
-.
-radiogroupWrapper
-{
-border
-:
-1px
-solid
-#
-404040
-;
-border
--
-bottom
--
-width
-:
-2px
-;
--
-moz
--
-border
--
-bottom
--
-colors
-:
-#
-C2C2C2
-#
-404040
-;
--
-moz
--
-border
--
-radius
-:
-4px
-;
--
-moz
--
-border
--
-radius
--
-bottomright
-:
-5px
-;
--
-moz
--
-border
--
-radius
--
-bottomleft
-:
-5px
-;
-background
--
-image
-:
-url
-(
-"
-chrome
-:
-/
-/
-global
-/
-skin
-/
-icons
-/
-white
--
-gray
--
-gradient
-.
-gif
-"
-)
-;
-background
--
-repeat
-:
-repeat
--
-x
-;
-}
-#
-viewGroup
-radio
-{
-padding
-:
-0px
-4px
-;
-margin
-:
-0
-;
--
-moz
--
-appearance
-:
-none
-!
-important
-;
-font
-:
-menu
-;
--
-moz
--
-border
--
-start
-:
-1px
-solid
-#
-404040
-;
-}
-#
-viewGroup
-radio
-:
-first
--
-child
-{
--
-moz
--
-border
--
-start
-:
-none
-;
-}
-#
-viewGroup
-radio
-[
-selected
-=
-"
-true
-"
-]
-{
-background
--
-color
-:
-#
-5E5E5E
-;
-color
-:
-#
-ffffff
-!
-important
 ;
 }
 /
