--- a/browser/themes/pinstripe/browser/pageInfo.css
+++ b/browser/themes/pinstripe/browser/pageInfo.css
@@ -427,149 +427,13 @@ skin
 /
 "
 ;
-#
-main
--
-window
-:
-not
-(
-[
-active
-=
-"
-true
-"
-]
-)
->
-#
-topStackBar
->
-#
-viewGroup
-{
-opacity
-:
-0
-.
-7
-;
-}
-#
-topStackBar
-{
-display
-:
--
-moz
--
-box
-;
--
-moz
--
-appearance
-:
--
-moz
--
-mac
--
-unified
--
-toolbar
-;
-padding
-:
-4px
-0
-8px
-;
--
-moz
--
-box
--
-pack
-:
-center
-;
-}
 /
 *
 View
 buttons
 *
 /
-#
-viewGroup
-{
-border
-:
-1px
-solid
-#
-404040
-;
-border
--
-bottom
-:
-2px
-solid
-;
--
-moz
--
-border
--
-bottom
--
-colors
-:
-#
-C2C2C2
-#
-404040
-;
--
-moz
--
-border
--
-radius
-:
-4px
-;
--
-moz
--
-border
--
-radius
--
-bottomright
-:
-5px
-;
--
-moz
--
-border
--
-radius
--
-bottomleft
-:
-5px
-;
-background
--
-image
-:
-url
-(
+import
 "
 chrome
 :
@@ -579,57 +443,11 @@ global
 /
 skin
 /
-icons
-/
-white
--
-gray
--
-gradient
+viewbuttons
 .
-gif
+css
 "
-)
 ;
-background
--
-repeat
-:
-repeat
--
-x
-;
-}
-#
-viewGroup
-radio
-{
--
-moz
--
-box
--
-orient
-:
-vertical
-;
--
-moz
--
-box
--
-align
-:
-center
-;
--
-moz
--
-appearance
-:
-none
-;
-}
 /
 *
 Extensions
