Bug 456039 - Polish preferences toolbar on OS X, correcting patch
UltraBlame original commit: 86cbb4694d74ab846c89e9597ff4aa0d95318b0b

--- a/browser/themes/pinstripe/browser/preferences/preferences.css
+++ b/browser/themes/pinstripe/browser/preferences/preferences.css
@@ -628,7 +628,7 @@ skin
 /
 preferences
 /
-prefbutton
+panebutton
 -
 active
 .
@@ -685,7 +685,7 @@ skin
 /
 preferences
 /
-prefbutton
+panebutton
 -
 inactive
 .
