Bug 426714 - Style nsIAlertsService alerts on Linux. r=ventnor, ui-r=faaborg
UltraBlame original commit: 9e3d35aea6ee9d2e9c669464a1b6d666413036f8

--- a/toolkit/themes/gnomestripe/global/alerts/alert.css
+++ b/toolkit/themes/gnomestripe/global/alerts/alert.css
@@ -586,10 +586,9 @@ alertBox
 {
 border
 :
-2px
+1px
 solid
-#
-7B969C
+ThreeDShadow
 ;
 background
 -
@@ -620,23 +619,10 @@ horizontal
 .
 alertImageBox
 {
--
-moz
--
 margin
--
-start
 :
-4px
-;
--
-moz
--
-margin
--
-end
-:
-6px
+0
+8px
 ;
 min
 -
@@ -726,26 +712,6 @@ text
 decoration
 :
 underline
-;
-}
-.
-alertText
-[
-clickable
-=
-"
-true
-"
-]
-:
-hover
-:
-active
-{
-color
-:
-#
-424F63
 ;
 }
 .
