Bug 463253 - Application name displayed in title bar; r=mconnor
UltraBlame original commit: 16d246e866502710169b85965d6a691b51bfec82

--- a/browser/components/privatebrowsing/content/aboutPrivateBrowsing.xhtml
+++ b/browser/components/privatebrowsing/content/aboutPrivateBrowsing.xhtml
@@ -546,6 +546,18 @@ xhtml
 <
 head
 >
+#
+ifdef
+XP_MACOSX
+<
+title
+>
+<
+/
+title
+>
+#
+else
 <
 title
 >
@@ -558,6 +570,8 @@ tabtitle
 /
 title
 >
+#
+endif
 <
 link
 rel
