Inherit -moz-box-ordinal-group to special frames and use a stable sorting algorithm (mergesort). b=431705 r+sr=roc
UltraBlame original commit: f7c410f03d0e5ce4dcc07ae7aa5da92249dff0c4

--- a/layout/style/ua.css
+++ b/layout/style/ua.css
@@ -1032,6 +1032,19 @@ mask
 :
 inherit
 ;
+-
+moz
+-
+box
+-
+ordinal
+-
+group
+:
+inherit
+!
+important
+;
 }
 *
 |
@@ -1062,6 +1075,19 @@ important
 float
 :
 none
+!
+important
+;
+-
+moz
+-
+box
+-
+ordinal
+-
+group
+:
+inherit
 !
 important
 ;
@@ -1552,6 +1578,19 @@ inherit
 opacity
 :
 inherit
+;
+-
+moz
+-
+box
+-
+ordinal
+-
+group
+:
+inherit
+!
+important
 ;
 }
 /
