Bug 342261 - [nsIAlertsService] all of notification window should be clickable. r=gavin
UltraBlame original commit: 37e5b45acb44878e6ed953b50d25a2824672aebd

--- a/toolkit/themes/gnomestripe/global/alerts/alert.css
+++ b/toolkit/themes/gnomestripe/global/alerts/alert.css
@@ -686,8 +686,8 @@ end
 6px
 ;
 }
-.
-alertText
+#
+alertNotification
 [
 clickable
 =
@@ -700,6 +700,24 @@ cursor
 :
 pointer
 ;
+}
+label
+{
+cursor
+:
+inherit
+;
+}
+.
+alertText
+[
+clickable
+=
+"
+true
+"
+]
+{
 color
 :
 -
