--- a/toolkit/themes/winstripe/global/alerts/alert.css
+++ b/toolkit/themes/winstripe/global/alerts/alert.css
@@ -700,8 +700,8 @@ end
 6px
 ;
 }
-.
-alertText
+#
+alertNotification
 [
 clickable
 =
@@ -714,6 +714,24 @@ cursor
 :
 pointer
 ;
+}
+label
+{
+cursor
+:
+inherit
+;
+}
+.
+alertText
+[
+clickable
+=
+"
+true
+"
+]
+{
 color
 :
 -
