Bug 424363 - Customize Toolbar ▸ Restore Default Set uses gtk-refresh instead of gtk-revert-to-saved. r=gavin, ui-r=faaborg
UltraBlame original commit: f03bb4a3ce53e3524b66c370d27e38d7e97ff454

--- a/toolkit/themes/gnomestripe/global/button.css
+++ b/toolkit/themes/gnomestripe/global/button.css
@@ -3044,6 +3044,107 @@ button
 icon
 =
 "
+revert
+"
+]
+.
+button
+-
+icon
+{
+list
+-
+style
+-
+image
+:
+url
+(
+"
+moz
+-
+icon
+:
+/
+/
+stock
+/
+gtk
+-
+revert
+-
+to
+-
+saved
+?
+size
+=
+button
+"
+)
+;
+}
+button
+[
+icon
+=
+"
+revert
+"
+]
+[
+disabled
+=
+"
+true
+"
+]
+.
+button
+-
+icon
+{
+list
+-
+style
+-
+image
+:
+url
+(
+"
+moz
+-
+icon
+:
+/
+/
+stock
+/
+gtk
+-
+revert
+-
+to
+-
+saved
+?
+size
+=
+button
+&
+state
+=
+disabled
+"
+)
+;
+}
+button
+[
+icon
+=
+"
 go
 -
 forward
