Bug 461366 - Don't use -moz-appearance for browser window background, it's not shown anyway, r=gavin
UltraBlame original commit: cfc7b5b533d3713f32e65f1ac1501b36948fac48

--- a/browser/themes/pinstripe/browser/browser.css
+++ b/browser/themes/pinstripe/browser/browser.css
@@ -520,6 +520,26 @@ xhtml
 main
 -
 window
+{
+-
+moz
+-
+appearance
+:
+none
+;
+background
+-
+color
+:
+#
+eeeeee
+;
+}
+#
+main
+-
+window
 [
 chromehidden
 ~
@@ -560,20 +580,6 @@ rgba
 .
 65
 )
-;
--
-moz
--
-appearance
-:
-none
-;
-background
--
-color
-:
-#
-eeeeee
 ;
 }
 /
