Bug 463923 - show expanded technical details in expert mode (SSL error pages). r=johnath/gavin
UltraBlame original commit: 85507cfcdda85194b13a4a4a2f4ad4b83957b2a7

--- a/browser/components/certerror/content/aboutCertError.xhtml
+++ b/browser/components/certerror/content/aboutCertError.xhtml
@@ -1204,6 +1204,13 @@ expertBadCert
 toggle
 (
 '
+technicalContent
+'
+)
+;
+toggle
+(
+'
 expertContent
 '
 )
@@ -1923,6 +1930,16 @@ if
 link
 .
 href
+&
+&
+getCSSClass
+(
+)
+!
+=
+"
+expertBadCert
+"
 )
 toggle
 (
@@ -2255,6 +2272,36 @@ div
 div
 >
 <
+!
+-
+-
+The
+following
+sections
+can
+be
+unhidden
+by
+default
+by
+setting
+the
+"
+browser
+.
+xul
+.
+error_pages
+.
+expert_bad_cert
+"
+pref
+to
+true
+-
+-
+>
+<
 div
 id
 =
@@ -2309,35 +2356,6 @@ technicalContentText
 <
 /
 div
->
-<
-!
--
--
-This
-section
-can
-be
-unhidden
-by
-default
-by
-setting
-the
-"
-browser
-.
-xul
-.
-error_pages
-.
-expert_bad_cert
-"
-pref
-to
-true
--
--
 >
 <
 div
