Bug 460899 - Use -moz-appearance: toolbar in the CSS for toolbars. r=dao
UltraBlame original commit: 2963a0f2c388f1c467b71a4614e1d193e405ec91

--- a/browser/themes/pinstripe/browser/browser.css
+++ b/browser/themes/pinstripe/browser/browser.css
@@ -676,6 +676,22 @@ toolbox
 #
 PersonalToolbar
 {
+border
+-
+top
+-
+color
+:
+rgba
+(
+255
+255
+255
+0
+.
+48
+)
+;
 background
 -
 color
@@ -688,6 +704,22 @@ mac
 chrome
 -
 inactive
+;
+border
+-
+bottom
+-
+color
+:
+rgba
+(
+0
+0
+0
+0
+.
+32
+)
 ;
 }
 #
@@ -971,6 +1003,13 @@ TOOLBAR
 #
 PersonalToolbar
 {
+-
+moz
+-
+appearance
+:
+none
+;
 background
 :
 url
@@ -1016,25 +1055,15 @@ rgba
 255
 0
 .
-25
+4
 )
 ;
 border
 -
 bottom
 :
-2px
+1px
 solid
-;
--
-moz
--
-border
--
-bottom
--
-colors
-:
 rgba
 (
 0
@@ -1042,14 +1071,14 @@ rgba
 0
 0
 .
-35
+57
 )
-transparent
 ;
 padding
 :
 2px
 0
+3px
 ;
 }
 /
