--- a/toolkit/themes/pinstripe/global/toolbar.css
+++ b/toolkit/themes/pinstripe/global/toolbar.css
@@ -619,7 +619,6 @@ menubar
 *
 /
 toolbar
-toolbarpalette
 {
 min
 -
@@ -635,49 +634,12 @@ height
 !
 important
 ;
-color
-:
-#
-000000
-;
-border
 -
-top
-:
-1px
-solid
-rgba
-(
-255
-255
-255
-0
-.
-45
-)
-;
-border
+moz
 -
-bottom
+appearance
 :
-1px
-solid
-rgba
-(
-0
-0
-0
-0
-.
-35
-)
-;
-background
--
-color
-:
-#
-9E9E9E
+toolbar
 ;
 }
 menubar
