Bug 469134 - Content XUL menubars shouldn't look like chrome toolbars, r=dao
UltraBlame original commit: b858eeb64326866d9561474bdbab77c2805c6232

--- a/toolkit/themes/pinstripe/global/toolbar.css
+++ b/toolkit/themes/pinstripe/global/toolbar.css
@@ -649,8 +649,28 @@ moz
 -
 appearance
 :
-toolbar
+dialog
 ;
+/
+*
+For
+content
+menubars
+"
+toolbar
+"
+is
+too
+dark
+so
+we
+use
+"
+dialog
+"
+.
+*
+/
 min
 -
 width
