Put 'thin' in the initial_values section instead of the other_values section for border shorthands, since the width should be 0px when border-style is none.
UltraBlame original commit: 4a4a42520901f245fe3a5a248f54b0d447d63509

--- a/layout/style/test/test_value_computation.html
+++ b/layout/style/test/test_value_computation.html
@@ -454,88 +454,23 @@ auto
 ]
 /
 /
-No
-idea
-what
+The
 '
-s
-happening
-for
-these
-two
-either
-"
-border
--
-top
-"
-:
-[
-"
-thin
-"
-]
-"
-border
--
-right
-"
-:
-[
-"
-thin
-"
-]
-"
-border
--
-bottom
-"
-:
-[
-"
-thin
-"
-]
-"
-border
--
-left
-"
-:
-[
-"
-thin
-"
-]
-"
--
-moz
--
-border
--
-start
-"
-:
-[
-"
-thin
-"
-]
-"
--
-moz
--
-border
--
-end
-"
-:
-[
-"
-thin
-"
-]
+medium
+'
+keyword
+should
+be
+computing
+to
+'
+3px
+'
+not
+'
+medium
+'
+.
 "
 outline
 -
