Bug 468191 - Padding on the Web feed icon and Star icon in location bar. r=gavin
UltraBlame original commit: 395654ec47abf701ca55e03465d10a60de55a919

--- a/browser/base/content/browser.css
+++ b/browser/base/content/browser.css
@@ -287,6 +287,31 @@ none
 ;
 }
 #
+feed
+-
+button
+>
+.
+button
+-
+box
+>
+.
+box
+-
+inherit
+>
+.
+button
+-
+text
+{
+display
+:
+none
+;
+}
+#
 urlbar
 [
 pageproxystate
@@ -347,6 +372,17 @@ icons
 go
 -
 button
+#
+feed
+-
+button
+:
+not
+(
+[
+feeds
+]
+)
 {
 visibility
 :
