--- a/browser/themes/pinstripe/browser/browser.css
+++ b/browser/themes/pinstripe/browser/browser.css
@@ -8845,6 +8845,17 @@ padding
 :
 1px
 ;
+-
+moz
+-
+padding
+-
+start
+:
+4px
+!
+important
+;
 list
 -
 style
@@ -12576,67 +12587,18 @@ DISPLAY
 feed
 -
 button
-#
-feed
--
-button
 >
 .
 button
 -
 box
-#
-feed
--
-button
-:
-hover
-:
-active
 >
-.
-button
--
-box
-{
-padding
-:
-0px
-;
-margin
-:
--
-1px
-;
-border
-:
-0px
-;
-background
--
-color
-:
-transparent
-;
-}
-#
-feed
--
-button
 .
 button
 -
 menu
 -
 dropmarker
-#
-feed
--
-button
-.
-button
--
-text
 {
 display
 :
@@ -12648,32 +12610,6 @@ feed
 -
 button
 {
--
-moz
--
-binding
-:
-url
-(
-"
-chrome
-:
-/
-/
-global
-/
-content
-/
-bindings
-/
-button
-.
-xml
-#
-menu
-"
-)
-;
 -
 moz
 -
@@ -12693,23 +12629,17 @@ height
 :
 0
 ;
-margin
 -
-right
+moz
+-
+padding
+-
+start
 :
-1px
+4px
 !
 important
 ;
-}
-#
-feed
--
-button
-[
-feeds
-]
-{
 list
 -
 style
@@ -12755,9 +12685,6 @@ rect
 feed
 -
 button
-[
-feeds
-]
 :
 hover
 {
@@ -12782,8 +12709,18 @@ feed
 -
 button
 [
-feeds
+open
+=
+"
+true
+"
 ]
+#
+feed
+-
+button
+:
+hover
 :
 active
 {
