--- a/browser/themes/gnomestripe/browser/browser.css
+++ b/browser/themes/gnomestripe/browser/browser.css
@@ -8395,7 +8395,10 @@ feed
 -
 button
 >
-hbox
+.
+button
+-
+box
 >
 .
 button
@@ -8403,17 +8406,6 @@ button
 menu
 -
 dropmarker
-#
-feed
--
-button
->
-hbox
->
-.
-button
--
-text
 {
 display
 :
@@ -8425,32 +8417,6 @@ feed
 -
 button
 {
--
-moz
--
-binding
-:
-url
-(
-"
-chrome
-:
-/
-/
-global
-/
-content
-/
-bindings
-/
-button
-.
-xml
-#
-menu
-"
-)
-;
 -
 moz
 -
@@ -8472,15 +8438,6 @@ right
 !
 important
 ;
-}
-#
-feed
--
-button
-[
-feeds
-]
-{
 list
 -
 style
