--- a/browser/themes/winstripe/browser/browser.css
+++ b/browser/themes/winstripe/browser/browser.css
@@ -15003,7 +15003,10 @@ feed
 -
 button
 >
-hbox
+.
+button
+-
+box
 >
 .
 button
@@ -15011,17 +15014,6 @@ button
 menu
 -
 dropmarker
-#
-feed
--
-button
->
-hbox
->
-.
-button
--
-text
 {
 display
 :
@@ -15033,32 +15025,6 @@ feed
 -
 button
 {
--
-moz
--
-binding
-:
-url
-(
-"
-chrome
-:
-/
-/
-global
-/
-content
-/
-bindings
-/
-button
-.
-xml
-#
-menu
-"
-)
-;
 -
 moz
 -
@@ -15079,15 +15045,6 @@ padding
 !
 important
 ;
-}
-#
-feed
--
-button
-[
-feeds
-]
-{
 list
 -
 style
@@ -15137,9 +15094,6 @@ rect
 feed
 -
 button
-[
-feeds
-]
 :
 hover
 {
@@ -15164,9 +15118,6 @@ feed
 -
 button
 [
-feeds
-]
-[
 open
 =
 "
@@ -15177,9 +15128,6 @@ true
 feed
 -
 button
-[
-feeds
-]
 :
 hover
 :
@@ -15199,23 +15147,6 @@ rect
 16px
 32px
 )
-;
-}
-#
-feed
--
-button
-:
-not
-(
-[
-feeds
-]
-)
-{
-visibility
-:
-collapse
 ;
 }
 /
