--- a/layout/style/html.css
+++ b/layout/style/html.css
@@ -421,6 +421,33 @@ to
 HTML
 *
 /
+namespace
+xul
+url
+(
+http
+:
+/
+/
+www
+.
+mozilla
+.
+org
+/
+keymaster
+/
+gatekeeper
+/
+there
+.
+is
+.
+only
+.
+xul
+)
+;
 /
 *
 bidi
@@ -2719,6 +2746,110 @@ style
 title
 noembed
 param
+{
+display
+:
+none
+;
+}
+/
+*
+media
+elements
+*
+/
+video
+>
+xul
+|
+videocontrols
+audio
+>
+xul
+|
+videocontrols
+{
+display
+:
+-
+moz
+-
+box
+;
+-
+moz
+-
+box
+-
+orient
+:
+vertical
+;
+-
+moz
+-
+binding
+:
+url
+(
+"
+chrome
+:
+/
+/
+global
+/
+content
+/
+bindings
+/
+videocontrols
+.
+xml
+#
+videoControls
+"
+)
+;
+}
+video
+:
+not
+(
+[
+controls
+]
+)
+>
+xul
+|
+videocontrols
+audio
+:
+not
+(
+[
+controls
+]
+)
+>
+xul
+|
+videocontrols
+{
+visibility
+:
+hidden
+;
+}
+audio
+:
+not
+(
+[
+controls
+]
+)
 {
 display
 :
