Bug 470048 - feed and "popup blocked" button cleanup. r=gavin
UltraBlame original commit: d2c8c94565499ffae6e200092bb15c1debc56dfb

--- a/browser/base/content/browser.css
+++ b/browser/base/content/browser.css
@@ -305,6 +305,22 @@ inherit
 button
 -
 text
+#
+feed
+-
+button
+>
+.
+button
+-
+box
+>
+.
+button
+-
+menu
+-
+dropmarker
 {
 display
 :
@@ -372,17 +388,6 @@ icons
 go
 -
 button
-#
-feed
--
-button
-:
-not
-(
-[
-feeds
-]
-)
 {
 visibility
 :
