bug 469331 - [SeaMonkey] test_bug458898.html fails, mark the test todo on SeaMonkey for now, r=dbaron
UltraBlame original commit: 7fdd82286b7320260821183b648fc5cf6579b9c8

--- a/layout/base/tests/test_bug458898.html
+++ b/layout/base/tests/test_bug458898.html
@@ -295,6 +295,47 @@ width
 "
 )
 ;
+/
+/
+doesn
+'
+t
+succeed
+on
+SeaMonkey
+currently
+see
+bug
+469331
+/
+/
+mark
+it
+todo
+there
+instead
+var
+testfunc
+=
+(
+navigator
+.
+userAgent
+.
+match
+(
+/
+SeaMonkey
+\
+/
+/
+)
+)
+?
+todo
+:
+ok
+;
 function
 loaded
 (
@@ -306,7 +347,7 @@ sizeToContent
 (
 )
 ;
-ok
+testfunc
 (
 win
 .
@@ -319,7 +360,7 @@ innerWidth
 "
 )
 ;
-ok
+testfunc
 (
 win
 .
