Bug 355822 - User profile selection window cropped; r=gavin.sharp
UltraBlame original commit: b839ff0630c618f46f9c253dc383dca75fe4096a

--- a/toolkit/profile/skin/profileSelection.css
+++ b/toolkit/profile/skin/profileSelection.css
@@ -465,6 +465,24 @@ png
 )
 ;
 }
+#
+profiles
+>
+listitem
+>
+listcell
+>
+image
+{
+width
+:
+16px
+;
+height
+:
+16px
+;
+}
 box
 #
 managebuttons
