--- a/toolkit/themes/pinstripe/mozapps/profile/profileSelection.css
+++ b/toolkit/themes/pinstripe/mozapps/profile/profileSelection.css
@@ -465,6 +465,24 @@ png
 )
 ;
 }
+#
+profiles
+>
+listitem
+>
+listcell
+>
+image
+{
+width
+:
+16px
+;
+height
+:
+16px
+;
+}
 box
 #
 managebuttons
