Bug 464371 - <video> fires multiple load events, controls should be <button>s. r=enn
UltraBlame original commit: 69d77c5270edfda9e56e412ac47470b11c94c785

--- a/toolkit/themes/pinstripe/global/media/videocontrols.css
+++ b/toolkit/themes/pinstripe/global/media/videocontrols.css
@@ -44,11 +44,7 @@ color
 .
 playButton
 {
-list
--
-style
--
-image
+background
 :
 url
 (
@@ -62,25 +58,52 @@ skin
 /
 media
 /
-videocontrols
+pauseButton
 .
 png
 )
+no
+-
+repeat
+center
 ;
+/
+*
+Remove
+the
+native
+button
+appearance
+and
+styling
+*
+/
 -
 moz
 -
-image
--
-region
+appearance
 :
-rect
-(
+none
+;
+margin
+:
 0px
-48px
+;
+padding
+:
+0px
+;
+min
+-
+height
+:
 24px
+;
+min
+-
+width
+:
 24px
-)
 ;
 }
 .
@@ -93,30 +116,7 @@ true
 "
 ]
 {
--
-moz
--
-image
--
-region
-:
-rect
-(
-0px
-24px
-24px
-0px
-)
-;
-}
-.
-muteButton
-{
-list
--
-style
--
-image
+background
 :
 url
 (
@@ -130,25 +130,79 @@ skin
 /
 media
 /
-videocontrols
+playButton
 .
 png
 )
+no
+-
+repeat
+center
 ;
+}
+.
+muteButton
+{
+background
+:
+url
+(
+chrome
+:
+/
+/
+global
+/
+skin
+/
+media
+/
+muteButton
+.
+png
+)
+no
+-
+repeat
+center
+;
+/
+*
+Remove
+the
+native
+button
+appearance
+and
+styling
+*
+/
 -
 moz
 -
-image
--
-region
+appearance
 :
-rect
-(
-24px
-24px
-48px
+none
+;
+margin
+:
 0px
-)
+;
+padding
+:
+0px
+;
+min
+-
+height
+:
+24px
+;
+min
+-
+width
+:
+24px
 ;
 }
 .
@@ -161,19 +215,27 @@ true
 "
 ]
 {
--
-moz
--
-image
--
-region
+background
 :
-rect
+url
 (
-24px
-48px
-48px
-24px
+chrome
+:
+/
+/
+global
+/
+skin
+/
+media
+/
+unmuteButton
+.
+png
 )
+no
+-
+repeat
+center
 ;
 }
