--- a/layout/style/test/test_shorthand_property_getters.html
+++ b/layout/style/test/test_shorthand_property_getters.html
@@ -743,6 +743,293 @@ border
 "
 )
 ;
+/
+/
+Test
+suppression
+of
+-
+moz
+-
+use
+-
+text
+-
+color
+in
+border
+shorthands
+.
+e
+.
+setAttribute
+(
+"
+style
+"
+"
+border
+:
+medium
+solid
+"
+)
+;
+ok
+(
+e
+.
+style
+.
+border
+=
+=
+"
+medium
+solid
+"
+|
+|
+e
+.
+style
+.
+border
+=
+=
+"
+solid
+medium
+"
+"
+implied
+default
+color
+omitted
+serializing
+border
+"
+)
+;
+ok
+(
+e
+.
+style
+.
+borderLeft
+=
+=
+"
+medium
+solid
+"
+|
+|
+e
+.
+style
+.
+borderLeft
+=
+=
+"
+solid
+medium
+"
+"
+implied
+default
+color
+omitted
+serializing
+border
+-
+left
+"
+)
+;
+ok
+(
+e
+.
+style
+.
+cssText
+=
+=
+"
+border
+:
+medium
+solid
+;
+"
+|
+|
+e
+.
+style
+.
+cssText
+=
+=
+"
+border
+:
+solid
+medium
+;
+"
+"
+implied
+default
+color
+omitted
+serializing
+declaration
+"
+)
+;
+e
+.
+setAttribute
+(
+"
+style
+"
+"
+border
+-
+right
+:
+medium
+solid
+"
+)
+;
+ok
+(
+e
+.
+style
+.
+borderRight
+=
+=
+"
+medium
+solid
+"
+|
+|
+e
+.
+style
+.
+borderRight
+=
+=
+"
+solid
+medium
+"
+"
+implied
+default
+color
+omitted
+serializing
+border
+-
+right
+"
+)
+;
+ok
+(
+e
+.
+style
+.
+borderRight
+=
+=
+"
+medium
+solid
+"
+|
+|
+e
+.
+style
+.
+borderRight
+=
+=
+"
+solid
+medium
+"
+"
+implied
+default
+color
+omitted
+serializing
+border
+-
+right
+"
+)
+;
+ok
+(
+e
+.
+style
+.
+cssText
+=
+=
+"
+border
+-
+right
+:
+medium
+solid
+;
+"
+|
+|
+e
+.
+style
+.
+cssText
+=
+=
+"
+border
+-
+right
+:
+solid
+medium
+;
+"
+"
+implied
+default
+color
+omitted
+serializing
+declaration
+"
+)
+;
 <
 /
 script
