Don't say that the font or background shorthands are present when the properties that they reset but can't otherwise specify are not their initial values.  (Bug 376075)  r+sr=bzbarsky
UltraBlame original commit: 15b55742e0cd09efa7e06ec714f88736940a461a

--- a/layout/style/test/test_bug377947.html
+++ b/layout/style/test/test_bug377947.html
@@ -612,10 +612,15 @@ adjust
 "
 :
 "
-0
-.
-45
+none
 "
+/
+/
+has
+to
+be
+default
+value
 "
 font
 -
@@ -625,6 +630,13 @@ stretch
 "
 normal
 "
+/
+/
+has
+to
+be
+default
+value
 }
 ;
 for
@@ -687,6 +699,92 @@ height
 1
 .
 5
+"
+"
+"
+)
+;
+isnot
+(
+s
+.
+getPropertyValue
+(
+"
+font
+"
+)
+"
+"
+"
+font
+shorthand
+should
+produce
+value
+when
+all
+subproperties
+set
+"
+)
+;
+s
+.
+setProperty
+(
+"
+font
+-
+stretch
+"
+"
+condensed
+"
+"
+"
+)
+;
+is
+(
+s
+.
+getPropertyValue
+(
+"
+font
+"
+)
+"
+"
+"
+font
+shorthand
+should
+be
+empty
+when
+font
+-
+stretch
+is
+non
+-
+default
+"
+)
+;
+s
+.
+setProperty
+(
+"
+font
+-
+stretch
+"
+"
+normal
 "
 "
 "
