bug 469331 - [SeaMonkey] test_bug458898.html fails, make the width test function always ok on Windows, r=dbaron
UltraBlame original commit: 823540b5353a040c7ce5b6f9d63e632625221096

--- a/layout/base/tests/test_bug458898.html
+++ b/layout/base/tests/test_bug458898.html
@@ -315,7 +315,7 @@ todo
 there
 instead
 var
-testfunc
+testfunc_h
 =
 (
 navigator
@@ -336,6 +336,26 @@ todo
 :
 ok
 ;
+var
+testfunc_w
+=
+(
+navigator
+.
+userAgent
+.
+match
+(
+/
+Windows
+/
+)
+)
+?
+ok
+:
+testfunc_h
+;
 function
 loaded
 (
@@ -347,7 +367,7 @@ sizeToContent
 (
 )
 ;
-testfunc
+testfunc_w
 (
 win
 .
@@ -360,7 +380,7 @@ innerWidth
 "
 )
 ;
-testfunc
+testfunc_h
 (
 win
 .
