--- a/layout/reftests/css-mediaqueries/mq_print_orientation.xhtml
+++ b/layout/reftests/css-mediaqueries/mq_print_orientation.xhtml
@@ -32,7 +32,7 @@ W3C
 /
 /
 DTD
-XHTML
+landscapeHTML
 1
 .
 1
@@ -163,28 +163,23 @@ aqua
 }
 /
 *
-using
-orientation
-portrait
-works
-.
-we
+Print
+reftests
 are
-a
 5
 /
 3
 which
 is
 landscape
-though
+.
 *
 /
 media
 (
 orientation
 :
-portrait
+landscape
 )
 {
 .
@@ -207,7 +202,7 @@ and
 (
 orientation
 :
-portrait
+landscape
 )
 {
 .
@@ -230,7 +225,7 @@ and
 (
 orientation
 :
-portrait
+landscape
 )
 {
 .
@@ -259,7 +254,7 @@ and
 (
 orientation
 :
-landscape
+portrait
 )
 {
 .
@@ -280,7 +275,7 @@ media
 (
 orientation
 :
-landscape
+portrait
 )
 {
 .
@@ -303,7 +298,7 @@ and
 (
 orientation
 :
-landscape
+portrait
 )
 {
 .
@@ -326,7 +321,7 @@ and
 (
 orientation
 :
-portrait
+landscape
 )
 {
 .
@@ -349,7 +344,7 @@ and
 (
 orientation
 :
-landscape
+portrait
 )
 {
 .
