Bug 471627 - Update text of about:private browsing before string freeze; r=gavin ui-r=beltzner
UltraBlame original commit: 9c13f028da54d5280d65af5b1ec4b60fd21e2675

--- a/browser/components/privatebrowsing/content/aboutPrivateBrowsing.xhtml
+++ b/browser/components/privatebrowsing/content/aboutPrivateBrowsing.xhtml
@@ -502,6 +502,29 @@ globalDTD
 !
 ENTITY
 %
+browserDTD
+SYSTEM
+"
+chrome
+:
+/
+/
+browser
+/
+locale
+/
+browser
+.
+dtd
+"
+>
+%
+browserDTD
+;
+<
+!
+ENTITY
+%
 privatebrowsingpageDTD
 SYSTEM
 "
@@ -951,18 +974,6 @@ div
 -
 Long
 Description
-(
-Note
-:
-See
-netError
-.
-dtd
-for
-used
-XHTML
-tags
-)
 -
 -
 >
@@ -980,7 +991,7 @@ p
 &
 privatebrowsingpage
 .
-longDesc
+description
 ;
 <
 /
@@ -1014,75 +1025,38 @@ p
 &
 privatebrowsingpage
 .
-clearRecentHistoryDesc
+clearRecentHistoryBefore
 ;
 <
-/
-p
->
-<
-button
-xmlns
+a
+href
 =
 "
-http
+javascript
 :
-/
-/
-www
-.
-mozilla
-.
-org
-/
-keymaster
-/
-gatekeeper
-/
-there
-.
-is
-.
-only
-.
-xul
-"
-id
-=
-"
-showClearRecentHistory
-"
-label
-=
-"
-&
-privatebrowsingpage
-.
-clearRecentHistory
-.
-label
-;
-"
-accesskey
-=
-"
-&
-privatebrowsingpage
-.
-clearRecentHistory
-.
-accesskey
-;
-"
-oncommand
-=
-"
 openSanitizeDialog
 (
 )
 ;
 "
+>
+&
+privatebrowsingpage
+.
+clearRecentHistoryInner
+;
+<
 /
+a
+>
+&
+privatebrowsingpage
+.
+clearRecentHistoryAfter
+;
+<
+/
+p
 >
 <
 /
@@ -1110,24 +1084,7 @@ p
 &
 privatebrowsingpage
 .
-howToStopDesc
-;
-<
-/
-p
->
-<
-p
-id
-=
-"
-enjoyDesc
-"
->
-&
-privatebrowsingpage
-.
-footerDesc
+howToStop
 ;
 <
 /
