Bug 415128: fix Help->About copyright notice to mention licensing information, and remove references to logo copyright in non-branded builds, r=gavin, a=beltzner
UltraBlame original commit: 87590083255c8c157059bcc9d504cec6a3ff4459

--- a/browser/base/content/aboutDialog.css
+++ b/browser/base/content/aboutDialog.css
@@ -43,7 +43,7 @@ min
 -
 height
 :
-380px
+400px
 ;
 }
 #
@@ -448,5 +448,29 @@ margin
 end
 :
 13px
+;
+}
+.
+text
+-
+link
+.
+text
+-
+link
+:
+focus
+{
+margin
+:
+0px
+;
+padding
+:
+0px
+;
+border
+:
+0px
 ;
 }
