Bug 463400 - Make about:privatebrowsing useful outside the private browsing mode; r=gavin ui-r=beltzner
UltraBlame original commit: f035bd74e1ca813592c982cd8892dbd05eaa9322

--- a/browser/components/privatebrowsing/content/aboutPrivateBrowsing.xhtml
+++ b/browser/components/privatebrowsing/content/aboutPrivateBrowsing.xhtml
@@ -587,7 +587,7 @@ title
 &
 privatebrowsingpage
 .
-tabtitle
+title
 ;
 <
 /
@@ -668,37 +668,70 @@ all
 /
 >
 <
-link
-rel
-=
-"
-icon
-"
+style
 type
 =
 "
-image
+text
 /
-png
+css
 "
-href
-=
-"
-chrome
-:
-/
-/
-browser
-/
-skin
-/
-Privacy
--
-16
+>
+<
+!
+[
+CDATA
+[
+body
 .
-png
-"
+normal
+.
+showPrivate
+{
+display
+:
+none
+;
+}
+body
+.
+normal
+.
+showNormal
+{
+display
+:
+block
+;
+}
+body
+.
+private
+.
+showPrivate
+{
+display
+:
+block
+;
+}
+body
+.
+private
+.
+showNormal
+{
+display
+:
+none
+;
+}
+]
+]
+>
+<
 /
+style
 >
 <
 script
@@ -820,6 +853,186 @@ null
 )
 ;
 }
+function
+setFavIcon
+(
+url
+)
+{
+var
+icon
+=
+document
+.
+createElement
+(
+"
+link
+"
+)
+;
+icon
+.
+setAttribute
+(
+"
+rel
+"
+"
+icon
+"
+)
+;
+icon
+.
+setAttribute
+(
+"
+type
+"
+"
+image
+/
+png
+"
+)
+;
+icon
+.
+setAttribute
+(
+"
+href
+"
+url
+)
+;
+document
+.
+getElementsByTagName
+(
+"
+head
+"
+)
+[
+0
+]
+.
+appendChild
+(
+icon
+)
+;
+}
+function
+onLoad
+(
+)
+{
+let
+pb
+=
+Cc
+[
+"
+mozilla
+.
+org
+/
+privatebrowsing
+;
+1
+"
+]
+.
+getService
+(
+Ci
+.
+nsIPrivateBrowsingService
+)
+;
+if
+(
+!
+pb
+.
+privateBrowsingEnabled
+)
+{
+document
+.
+body
+.
+setAttribute
+(
+"
+class
+"
+"
+normal
+"
+)
+;
+document
+.
+title
+=
+document
+.
+body
+.
+getAttribute
+(
+"
+normaltitle
+"
+)
+;
+setFavIcon
+(
+"
+chrome
+:
+/
+/
+global
+/
+skin
+/
+icons
+/
+question
+-
+16
+.
+png
+"
+)
+;
+}
+else
+setFavIcon
+(
+"
+chrome
+:
+/
+/
+browser
+/
+skin
+/
+Privacy
+-
+16
+.
+png
+"
+)
+;
+}
 ]
 ]
 >
@@ -840,6 +1053,30 @@ dir
 locale
 .
 dir
+;
+"
+class
+=
+"
+private
+"
+onload
+=
+"
+onLoad
+(
+)
+;
+"
+normaltitle
+=
+"
+&
+privatebrowsingpage
+.
+title
+.
+normal
 ;
 "
 >
@@ -890,11 +1127,40 @@ id
 "
 errorTitleText
 "
+class
+=
+"
+showPrivate
+"
 >
 &
 privatebrowsingpage
 .
-pagetitle
+title
+;
+<
+/
+h1
+>
+<
+h1
+id
+=
+"
+errorTitleTextNormal
+"
+class
+=
+"
+showNormal
+"
+>
+&
+privatebrowsingpage
+.
+title
+.
+normal
 ;
 <
 /
@@ -954,11 +1220,40 @@ id
 "
 errorShortDescText
 "
+class
+=
+"
+showPrivate
+"
 >
 &
 privatebrowsingpage
 .
 issueDesc
+;
+<
+/
+p
+>
+<
+p
+id
+=
+"
+errorShortDescTextNormal
+"
+class
+=
+"
+showNormal
+"
+>
+&
+privatebrowsingpage
+.
+issueDesc
+.
+normal
 ;
 <
 /
@@ -987,6 +1282,11 @@ errorLongDesc
 >
 <
 p
+id
+=
+"
+errorLongDescText
+"
 >
 &
 privatebrowsingpage
@@ -1017,6 +1317,11 @@ id
 =
 "
 clearRecentHistoryDesc
+"
+class
+=
+"
+showPrivate
 "
 >
 <
@@ -1066,6 +1371,89 @@ div
 !
 -
 -
+Start
+Private
+Browsing
+-
+-
+>
+<
+div
+id
+=
+"
+startPrivateBrowsingDesc
+"
+class
+=
+"
+showNormal
+"
+>
+<
+button
+xmlns
+=
+"
+http
+:
+/
+/
+www
+.
+mozilla
+.
+org
+/
+keymaster
+/
+gatekeeper
+/
+there
+.
+is
+.
+only
+.
+xul
+"
+id
+=
+"
+startPrivateBrowsing
+"
+label
+=
+"
+&
+privatebrowsingpage
+.
+startPrivateBrowsing
+.
+label
+;
+"
+accesskey
+=
+"
+&
+privatebrowsingpage
+.
+startPrivateBrowsing
+.
+accesskey
+;
+"
+/
+>
+<
+/
+div
+>
+<
+!
+-
+-
 Footer
 -
 -
@@ -1080,11 +1468,43 @@ footerDesc
 >
 <
 p
+id
+=
+"
+footerText
+"
+class
+=
+"
+showPrivate
+"
 >
 &
 privatebrowsingpage
 .
 howToStop
+;
+<
+/
+p
+>
+<
+p
+id
+=
+"
+footerTextNormal
+"
+class
+=
+"
+showNormal
+"
+>
+&
+privatebrowsingpage
+.
+howToStart
 ;
 <
 /
