--- a/browser/themes/pinstripe/browser/aboutPrivateBrowsing.css
+++ b/browser/themes/pinstripe/browser/aboutPrivateBrowsing.css
@@ -393,6 +393,10 @@ BLOCK
 /
 %
 endif
+body
+.
+private
+>
 #
 errorPageContainer
 {
@@ -420,6 +424,39 @@ png
 )
 ;
 }
+body
+.
+normal
+>
+#
+errorPageContainer
+{
+background
+-
+image
+:
+url
+(
+"
+chrome
+:
+/
+/
+global
+/
+skin
+/
+icons
+/
+question
+-
+64
+.
+png
+"
+)
+;
+}
 #
 clearRecentHistoryDesc
 {
@@ -429,4 +466,87 @@ top
 :
 2em
 ;
+}
+#
+clearRecentHistoryDesc
+>
+p
+{
+font
+-
+size
+:
+110
+%
+;
+/
+*
+to
+match
+the
+value
+set
+in
+chrome
+:
+/
+/
+global
+/
+skin
+/
+netError
+.
+css
+*
+/
+}
+#
+startPrivateBrowsingDesc
+>
+button
+{
+-
+moz
+-
+margin
+-
+start
+:
+0
+;
+}
+#
+footerDesc
+>
+p
+{
+font
+-
+size
+:
+110
+%
+;
+/
+*
+to
+match
+the
+value
+set
+in
+chrome
+:
+/
+/
+global
+/
+skin
+/
+netError
+.
+css
+*
+/
 }
