Bug 469331 - [SeaMonkey] test_bug458898.html fails; (Cv1) Report the (failing) values; r=dbaron
UltraBlame original commit: 6c260601ec86d96cc578100771cb63cc44bc0d99

--- a/layout/base/tests/test_bug458898.html
+++ b/layout/base/tests/test_bug458898.html
@@ -377,6 +377,18 @@ innerWidth
 100
 "
 innerWidth
+:
+"
++
+win
+.
+innerWidth
++
+"
+>
+=
+100
+?
 "
 )
 ;
@@ -390,6 +402,18 @@ innerHeight
 200
 "
 innerHeight
+:
+"
++
+win
+.
+innerHeight
++
+"
+>
+=
+200
+?
 "
 )
 ;
