Bug 457862 -  onresize events should fire at every resize while resizing the window, r+sr=dbaron
UltraBlame original commit: b26e61de06dd249e2bc7dd72094346e73cef6cee

--- a/layout/style/test/test_hover.html
+++ b/layout/style/test/test_hover.html
@@ -596,6 +596,59 @@ clickCount
 }
 ;
 function
+setResize
+(
+str
+)
+{
+iframe
+.
+contentDocument
+.
+body
+.
+setAttribute
+(
+"
+onresize
+"
+"
+document
+.
+body
+.
+setAttribute
+(
+'
+onresize
+'
+'
+void
+(
+0
+)
+'
+)
+;
+"
++
+"
+setTimeout
+(
+'
+"
++
+str
++
+"
+'
+100
+)
+"
+)
+;
+}
+function
 step1
 (
 )
@@ -868,17 +921,8 @@ Bug
 *
 *
 /
-iframe
-.
-contentDocument
-.
-body
-.
-setAttribute
+setResize
 (
-"
-onresize
-"
 "
 parent
 .
@@ -1017,17 +1061,8 @@ width
 "
 )
 ;
-iframe
-.
-contentDocument
-.
-body
-.
-setAttribute
+setResize
 (
-"
-onresize
-"
 "
 parent
 .
@@ -1157,17 +1192,8 @@ apply
 "
 )
 ;
-iframe
-.
-contentDocument
-.
-body
-.
-setAttribute
+setResize
 (
-"
-onresize
-"
 "
 parent
 .
@@ -1298,17 +1324,8 @@ step5called
 =
 true
 ;
-iframe
-.
-contentDocument
-.
-body
-.
-setAttribute
+setResize
 (
-"
-onresize
-"
 "
 parent
 .
@@ -1376,17 +1393,8 @@ apply
 "
 )
 ;
-iframe
-.
-contentDocument
-.
-body
-.
-setAttribute
+setResize
 (
-"
-onresize
-"
 "
 parent
 .
@@ -1495,17 +1503,8 @@ applies
 "
 )
 ;
-iframe
-.
-contentDocument
-.
-body
-.
-setAttribute
+setResize
 (
-"
-onresize
-"
 "
 parent
 .
@@ -1682,17 +1681,8 @@ scrollLeft
 =
 5
 ;
-iframe
-.
-contentDocument
-.
-body
-.
-setAttribute
+setResize
 (
-"
-onresize
-"
 "
 parent
 .
@@ -1772,17 +1762,8 @@ applies
 "
 )
 ;
-iframe
-.
-contentDocument
-.
-body
-.
-setAttribute
+setResize
 (
-"
-onresize
-"
 "
 parent
 .
@@ -1894,17 +1875,8 @@ apply
 "
 )
 ;
-iframe
-.
-contentDocument
-.
-body
-.
-setAttribute
+setResize
 (
-"
-onresize
-"
 "
 parent
 .
@@ -2035,17 +2007,8 @@ step13called
 =
 true
 ;
-iframe
-.
-contentDocument
-.
-body
-.
-setAttribute
+setResize
 (
-"
-onresize
-"
 "
 parent
 .
@@ -2119,17 +2082,8 @@ apply
 "
 )
 ;
-iframe
-.
-contentDocument
-.
-body
-.
-setAttribute
+setResize
 (
-"
-onresize
-"
 "
 parent
 .
@@ -2244,17 +2198,8 @@ applies
 "
 )
 ;
-iframe
-.
-contentDocument
-.
-body
-.
-setAttribute
+setResize
 (
-"
-onresize
-"
 "
 parent
 .
