Bug 449442 - Use -moz-appearance: statusbar in the Mac theme, r=dao
UltraBlame original commit: c7538401b1c942584ea04613693fff0ca99f5122

--- a/toolkit/themes/pinstripe/mozapps/downloads/downloads.css
+++ b/toolkit/themes/pinstripe/mozapps/downloads/downloads.css
@@ -22,15 +22,6 @@ width
 :
 0
 ;
-border
--
-bottom
-:
-1px
-solid
-#
-404040
-;
 }
 /
 *
@@ -668,103 +659,12 @@ end
 :
 4px
 ;
-background
 -
-image
+moz
+-
+appearance
 :
-url
-(
-"
-chrome
-:
-/
-/
-global
-/
-skin
-/
-toolbar
-/
-toolbar
--
-background
-.
-gif
-"
-)
-;
-background
--
-color
-:
-#
-9f9f9f
-;
-background
--
-repeat
-:
-repeat
--
-x
-;
-background
--
-position
-:
-top
-left
-;
-}
-#
-downloadManager
-:
-not
-(
-[
-active
-=
-"
-true
-"
-]
-)
-#
-search
-{
-background
--
-image
-:
-url
-(
-"
-chrome
-:
-/
-/
-global
-/
-skin
-/
-toolbar
-/
-toolbar
--
-background
--
-inactive
-.
-png
-"
-)
-;
-background
--
-color
-:
-#
-cfcfcf
+statusbar
 ;
 }
 #
