Split insert-rule-1 into two tests, each of which inserts only one rule, so that we can remove reftest-wait at the right time and make the test reliable.  (Bug 472267)
UltraBlame original commit: 04720c0140a96465c2acb6c2fd0e403005eee5e1

--- a/layout/reftests/font-face/insert-rule-1b.html
+++ b/layout/reftests/font-face/insert-rule-1b.html
@@ -115,6 +115,33 @@ MarkB
 "
 ;
 }
+font
+-
+face
+{
+font
+-
+family
+:
+'
+MarkA
+'
+;
+src
+:
+url
+(
+.
+.
+/
+fonts
+/
+markA
+.
+ttf
+)
+;
+}
 <
 /
 style
@@ -161,7 +188,7 @@ iframe
 .
 contentWindow
 .
-arm
+arm_for_wider
 (
 )
 ;
@@ -181,46 +208,6 @@ style
 ]
 .
 sheet
-;
-sheet
-.
-insertRule
-(
-"
-font
--
-face
-{
-font
--
-family
-:
-'
-MarkA
-'
-;
-src
-:
-url
-(
-.
-.
-/
-fonts
-/
-markA
-.
-ttf
-)
-;
-}
-"
-sheet
-.
-cssRules
-.
-length
-)
 ;
 sheet
 .
