change crashtest for 472237 to use local font
UltraBlame original commit: be51e923473c095c526e1642f724590a026cbb1e

--- a/layout/style/crashtests/472237-1.html
+++ b/layout/style/crashtests/472237-1.html
@@ -46,25 +46,45 @@ Sans
 SC
 "
 ;
+/
+*
+the
+font
+url
+below
+is
+correct
+but
+won
+'
+t
+be
+accessed
+due
+to
+cross
+-
+site
+restrictions
+*
+/
 src
 :
 url
 (
-http
-:
-/
-/
-raphaeljs
 .
-com
-/
-fontin
--
-sans
--
-sc
 .
-otf
+/
+.
+.
+/
+reftests
+/
+fonts
+/
+markA
+.
+ttf
 )
 format
 (
