Bug 471921 - use proper CSS instead of first-tab, last-tab and afterselected attributes. r=gavin
UltraBlame original commit: 7e5854c047bd7b1161cce2a3d9de8f82d22a85bc

--- a/toolkit/themes/pinstripe/global/tabbox.css
+++ b/toolkit/themes/pinstripe/global/tabbox.css
@@ -315,13 +315,12 @@ tab
 ;
 }
 tab
-[
+:
 first
 -
-tab
-=
-true
-]
+of
+-
+type
 {
 -
 moz
@@ -334,13 +333,12 @@ start
 ;
 }
 tab
-[
+:
 last
 -
-tab
-=
-true
-]
+of
+-
+type
 {
 -
 moz
@@ -901,28 +899,11 @@ tabs
 >
 tab
 :
-not
-(
-[
-selected
-=
-true
-]
-)
-[
 first
 -
-tab
-=
-true
-]
-tabs
-.
-tabs
+of
 -
-bottom
->
-tab
+type
 :
 not
 (
@@ -932,13 +913,28 @@ selected
 true
 ]
 )
-[
+tabs
+.
+tabs
+-
+bottom
+>
+tab
+:
 first
 -
-tab
+of
+-
+type
+:
+not
+(
+[
+selected
 =
 true
 ]
+)
 {
 -
 moz
@@ -961,15 +957,14 @@ bottom
 tabs
 >
 tab
-[
-selected
-=
-true
-]
-[
+:
 first
 -
-tab
+of
+-
+type
+[
+selected
 =
 true
 ]
@@ -980,15 +975,14 @@ tabs
 bottom
 >
 tab
-[
-selected
-=
-true
-]
-[
+:
 first
 -
-tab
+of
+-
+type
+[
+selected
 =
 true
 ]
