--- a/toolkit/themes/winstripe/global/tabbox.css
+++ b/toolkit/themes/winstripe/global/tabbox.css
@@ -984,9 +984,20 @@ beforeselected
 true
 "
 ]
+:
+not
+(
+[
+chromedir
+=
+"
+rtl
+"
+]
+)
 tab
 [
-afterselected
+selected
 =
 "
 true
@@ -999,6 +1010,8 @@ chromedir
 rtl
 "
 ]
++
+tab
 {
 border
 -
@@ -1020,12 +1033,25 @@ topright
 }
 tab
 [
-afterselected
+selected
 =
 "
 true
 "
 ]
+:
+not
+(
+[
+chromedir
+=
+"
+rtl
+"
+]
+)
++
+tab
 tab
 [
 beforeselected
@@ -1061,15 +1087,12 @@ topleft
 ;
 }
 tab
-[
+:
 first
 -
-tab
-=
-"
-true
-"
-]
+of
+-
+type
 [
 selected
 =
@@ -1295,12 +1318,23 @@ beforeselected
 true
 "
 ]
+:
+not
+(
+[
+chromedir
+=
+"
+rtl
+"
+]
+)
 .
 tab
 -
 bottom
 [
-afterselected
+selected
 =
 "
 true
@@ -1313,6 +1347,11 @@ chromedir
 rtl
 "
 ]
++
+.
+tab
+-
+bottom
 {
 -
 moz
@@ -1331,12 +1370,28 @@ tab
 -
 bottom
 [
-afterselected
+selected
 =
 "
 true
 "
 ]
+:
+not
+(
+[
+chromedir
+=
+"
+rtl
+"
+]
+)
++
+.
+tab
+-
+bottom
 .
 tab
 -
