--- a/toolkit/content/xul.css
+++ b/toolkit/content/xul.css
@@ -4607,6 +4607,58 @@ shadow
 inherit
 ;
 }
+textbox
+[
+empty
+=
+"
+true
+"
+]
+html
+|
+*
+.
+textbox
+-
+input
+[
+emptytextdelay
+=
+"
+true
+"
+]
+textbox
+[
+empty
+=
+"
+true
+"
+]
+html
+|
+*
+.
+textbox
+-
+textarea
+[
+emptytextdelay
+=
+"
+true
+"
+]
+{
+color
+:
+transparent
+!
+important
+;
+}
 .
 textbox
 -
