Bug 416013 - switching the text input direction should not affect emptytext. r=ehsan,gavin
UltraBlame original commit: b5120305d873923f8273675b7b742cc37f48a0d3

--- a/toolkit/content/xul.css
+++ b/toolkit/content/xul.css
@@ -4622,6 +4622,104 @@ html
 textbox
 -
 input
+textbox
+[
+empty
+=
+"
+true
+"
+]
+html
+|
+*
+.
+textbox
+-
+textarea
+{
+text
+-
+align
+:
+left
+;
+direction
+:
+ltr
+;
+}
+textbox
+[
+empty
+=
+"
+true
+"
+]
+[
+chromedir
+=
+"
+rtl
+"
+]
+html
+|
+*
+.
+textbox
+-
+input
+textbox
+[
+empty
+=
+"
+true
+"
+]
+[
+chromedir
+=
+"
+rtl
+"
+]
+html
+|
+*
+.
+textbox
+-
+textarea
+{
+text
+-
+align
+:
+right
+;
+direction
+:
+rtl
+;
+}
+textbox
+[
+empty
+=
+"
+true
+"
+]
+html
+|
+*
+.
+textbox
+-
+input
 [
 emptytextdelay
 =
