Bug 413053 - Bookmark Dialogs: Align treeview and listview, r=dao r=dietrich ui-r=faaborg
UltraBlame original commit: acee30ba305abcf49423cd820c41c1fce768dd6e

--- a/browser/themes/gnomestripe/browser/browser.css
+++ b/browser/themes/gnomestripe/browser/browser.css
@@ -9044,6 +9044,29 @@ size
 }
 /
 *
+Implements
+editBookmarkPanel
+resizing
+on
+folderTree
+un
+-
+collapse
+.
+*
+/
+#
+editBMPanel_folderTree
+{
+min
+-
+width
+:
+300px
+;
+}
+/
+*
 Content
 area
 *
