--- a/browser/themes/gnomestripe/browser/places/editBookmarkOverlay.css
+++ b/browser/themes/gnomestripe/browser/places/editBookmarkOverlay.css
@@ -680,27 +680,29 @@ gif
 ;
 }
 #
-editBMPanel_tagsSelector
-[
-collapsed
-=
-"
-true
-"
-]
+editBookmarkPanelContent
+{
+min
+-
+width
+:
+260px
+;
+}
 #
 editBMPanel_folderTree
-[
-collapsed
-=
-"
-true
-"
-]
 {
-display
+margin
+-
+top
 :
-none
+2px
+;
+margin
+-
+bottom
+:
+2px
 ;
 }
 /
