--- a/browser/themes/pinstripe/browser/browser.css
+++ b/browser/themes/pinstripe/browser/browser.css
@@ -9684,28 +9684,16 @@ padding
 0
 ;
 margin
+-
+left
 :
-0
+4px
 ;
--
-moz
--
 margin
 -
-start
+right
 :
--
-8px
-;
--
-moz
--
-margin
--
-end
-:
--
-8px
+4px
 ;
 margin
 -
@@ -10463,36 +10451,31 @@ rgba
 15
 )
 ;
-margin
-:
-0px
-;
--
-moz
--
-margin
--
-start
-:
--
-8px
-;
--
-moz
--
-margin
--
-end
-:
--
-8px
-;
 color
 :
 #
 ffffff
 !
 important
+;
+/
+*
+Implements
+editBookmarkPanel
+resizing
+on
+folderTree
+un
+-
+collapse
+.
+*
+/
+min
+-
+width
+:
+300px
 ;
 }
 #
@@ -10832,14 +10815,6 @@ rgba
 .
 35
 )
-;
-margin
-:
-6px
--
-8px
-!
-important
 ;
 color
 :
