--- a/browser/themes/pinstripe/browser/places/editBookmarkOverlay.css
+++ b/browser/themes/pinstripe/browser/places/editBookmarkOverlay.css
@@ -571,27 +571,6 @@ important
 *
 *
 *
-folder
-tree
-*
-*
-*
-*
-/
-#
-editBMPanel_folderTree
-{
-margin
-:
-6px
-0
-;
-}
-/
-*
-*
-*
-*
 expanders
 *
 *
@@ -613,6 +592,10 @@ moz
 appearance
 :
 none
+;
+margin
+:
+0
 ;
 margin
 -
@@ -781,6 +764,27 @@ png
 )
 !
 important
+;
+}
+#
+editBookmarkPanelContent
+{
+min
+-
+width
+:
+260px
+;
+}
+#
+editBMPanel_folderTree
+{
+margin
+:
+6px
+4px
+0
+4px
 ;
 }
 /
