--- a/browser/themes/winstripe/browser/places/editBookmarkOverlay.css
+++ b/browser/themes/winstripe/browser/places/editBookmarkOverlay.css
@@ -536,6 +536,15 @@ margin
 :
 0
 ;
+-
+moz
+-
+margin
+-
+end
+:
+4px
+;
 }
 .
 expander
@@ -618,27 +627,29 @@ png
 ;
 }
 #
-editBMPanel_tagsSelector
-[
-collapsed
-=
-"
-true
-"
-]
+editBookmarkPanelContent
+{
+min
+-
+width
+:
+260px
+;
+}
 #
 editBMPanel_folderTree
-[
-collapsed
-=
-"
-true
-"
-]
 {
-display
+margin
+-
+top
 :
-none
+2px
+;
+margin
+-
+bottom
+:
+2px
 ;
 }
 /
