--- a/browser/themes/winstripe/browser/browser.css
+++ b/browser/themes/winstripe/browser/browser.css
@@ -11535,6 +11535,29 @@ size
 }
 /
 *
+Implements
+editBookmarkPanel
+resizing
+on
+folderTree
+un
+-
+collapse
+.
+*
+/
+#
+editBMPanel_folderTree
+{
+min
+-
+width
+:
+300px
+;
+}
+/
+*
 :
 :
 :
