Bug 471935 - Copying Text from about:privatebrowsing page and then pasting yields different text; r=gavin
UltraBlame original commit: 02963082440153977d64eafe4ab8a7ac063666b3

--- a/browser/components/privatebrowsing/content/aboutPrivateBrowsing.xhtml
+++ b/browser/components/privatebrowsing/content/aboutPrivateBrowsing.xhtml
@@ -668,72 +668,6 @@ all
 /
 >
 <
-style
-type
-=
-"
-text
-/
-css
-"
->
-<
-!
-[
-CDATA
-[
-body
-.
-normal
-.
-showPrivate
-{
-display
-:
-none
-;
-}
-body
-.
-normal
-.
-showNormal
-{
-display
-:
-block
-;
-}
-body
-.
-private
-.
-showPrivate
-{
-display
-:
-block
-;
-}
-body
-.
-private
-.
-showNormal
-{
-display
-:
-none
-;
-}
-]
-]
->
-<
-/
-style
->
-<
 script
 type
 =
@@ -931,6 +865,9 @@ onLoad
 )
 {
 let
+selector
+;
+let
 pb
 =
 Cc
@@ -1011,8 +948,16 @@ png
 "
 )
 ;
+selector
+=
+"
+.
+showPrivate
+"
+;
 }
 else
+{
 setFavIcon
 (
 "
@@ -1030,6 +975,67 @@ Privacy
 .
 png
 "
+)
+;
+selector
+=
+"
+.
+showNormal
+"
+;
+}
+/
+/
+Remove
+hidden
+elements
+to
+avoid
+bug
+39098
+let
+elements
+=
+document
+.
+body
+.
+querySelectorAll
+(
+selector
+)
+;
+for
+(
+let
+i
+=
+0
+;
+i
+<
+elements
+.
+length
+;
++
++
+i
+)
+elements
+[
+i
+]
+.
+parentNode
+.
+removeChild
+(
+elements
+[
+i
+]
 )
 ;
 }
