--- a/browser/themes/pinstripe/browser/browser.css
+++ b/browser/themes/pinstripe/browser/browser.css
@@ -12797,6 +12797,47 @@ important
 toolbarbutton
 .
 chevron
+[
+chromedir
+=
+"
+rtl
+"
+]
+{
+list
+-
+style
+-
+image
+:
+url
+(
+"
+chrome
+:
+/
+/
+global
+/
+skin
+/
+icons
+/
+chevron
+-
+rtl
+.
+png
+"
+)
+!
+important
+;
+}
+toolbarbutton
+.
+chevron
 >
 .
 toolbarbutton
